# Apollo

./: .gitignore  build.gradle  gradle.properties  package-upload.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/munin/music/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: love.raw
app/src/main/assets/sql/: 1.sql  2.sql  sql.sql
app/src/main/cpp/: CMakeLists.txt  LameMp3.cpp  LameMp3.h  apollo-video.cpp
app/src/main/java/com/munin/music/: MainActivity.java
app/src/main/java/com/munin/music/ad/: AdFactory.java
app/src/main/java/com/munin/music/ad/controller/: GifAdController.java  ImgAdController.java  VideoAdController.java
app/src/main/java/com/munin/music/broadcast/: MusicFeedbackReceiver.java  MusicReceiver.java
app/src/main/java/com/munin/music/cache/: GlobalConfigCache.java
app/src/main/java/com/munin/music/config/: ApolloApplication.java
app/src/main/java/com/munin/music/dao/: AppDatabase.java  BaseDao.java  Converters.java  User.java  UserDao.java
app/src/main/java/com/munin/music/data/: ConfigData.java  MusicData.java  PictureData.kt
app/src/main/java/com/munin/music/database/: DataBaseUtils.java  GreenDaoUtils.java
app/src/main/java/com/munin/music/manager/: VideoControlManager.java
app/src/main/java/com/munin/music/manager/video/: VideoState.java
app/src/main/java/com/munin/music/media/: LameUtils.java
app/src/main/java/com/munin/music/media/music/: MusicAction.java  MusicFeedback.java  MusicQuery.java  MusicStatus.java
app/src/main/java/com/munin/music/media/record/: NativeAudioRecorderHelper.java  NativeMediaRecorder.java  RTAudioRecorderHelper.java
app/src/main/java/com/munin/music/media/sound/: NativeAudioTrackHelper.java  SoundHelper.java
app/src/main/java/com/munin/music/media/utils/: AudioUtils.java  RecordCameraUtils.java
app/src/main/java/com/munin/music/media/video/: NativeVideo.java
app/src/main/java/com/munin/music/model/ad/: AdModel.java
app/src/main/java/com/munin/music/model/music/: MusicModel.java
app/src/main/java/com/munin/music/net/: ApiClient.kt  IApiService.java  TrustAllManager.java
app/src/main/java/com/munin/music/service/: MusicService.java
app/src/main/java/com/munin/music/share/: ShareTextController.java
app/src/main/java/com/munin/music/ui/: ApolloLauncherActivity.java  BaseActivity.java  PicturePlazaActivity.kt  PlayerVideoAct.kt
app/src/main/java/com/munin/music/utils/: ActivityUtils.java  ActivityUtils.kt  DataBindingAdapterUtils.java  IntentHandleUtils.java  LuancherUtils.java  MusicControlUtils.java  WebViewJavaScriptFunction.java  X5WebView.java
app/src/main/res-ad/layout/: layout_img_ad.xml
app/src/main/res-main/values/: dimens.xml
app/src/main/res-music-player/drawable/: drawable_music_disc.xml  drawable_music_tiny_pause.xml  drawable_music_tiny_play.xml
app/src/main/res-music-player/layout/: layout_music_player_bottom.xml  layout_music_player_controller.xml  layout_music_player_cover.xml  layout_music_player_progress_controller.xml  layout_music_tiny_controller.xml  layout_music_tiny_description.xml  layout_test_view.xml
app/src/main/res-music-player/values/: dimens.xml  ids.xml  styles.xml
app/src/main/res-picture-plaza/layout/: layout_picture.xml
app/src/main/res-title-bar/layout/: layout_main_title_bar.xml  layout_music_title_bar.xml
app/src/main/res-title-bar/values/: dimens.xml
app/src/main/res-video/layout/: layout_video.xml  layout_video_controller.xml  layout_video_player.xml
app/src/main/res-video/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/drawable/: drawable_music_disc_bg.xml
app/src/main/res/layout/: act_ffmpeg_video.xml  activity_flash.xml  activity_main.xml  activity_music_player.xml  activity_piture_plaza.xml  activity_recorder.xml  activity_video_detail.xml
app/src/main/res/mipmap-anydpi-v26/: apollo_round.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/munin/music/: ExampleUnitTest.java
buildSrc/src/main/groovy/apollo/: Config.groovy
config/: dev_url_config.gradle  online_url_config.gradle  test_url_config.gradle
mpeg/: CMakeLists.txt  build.gradle
mpeg/src/androidTest/java/com/flutter/mpeg/: ExampleInstrumentedTest.kt
mpeg/src/main/: AndroidManifest.xml
mpeg/src/main/cpp/: EncodeX264.cpp  EncodeX264.h  LameMp3.cpp  LameMp3.h
mpeg/src/main/cpp/ffmpeg/: FFVideoPlayer.cpp  FFVideoPlayer.h  Log.h
mpeg/src/main/cpp/x264/: PUX264Encoder.cpp  x264_config.h
mpeg/src/main/java/com/flutter/mpeg/: AudioVideoUtils.java  FFmpegCommandList.java  FFmpegCommandSupport.java  LameUtils.java  SimpleVideoView.java  X264Helper.java
mpeg/src/main/res/values/: strings.xml
mpeg/src/test/java/com/flutter/mpeg/: ExampleUnitTest.kt
videocache/: build.gradle
videocache/src/androidTest/java/com/flutter/videocache/: ExampleInstrumentedTest.java
videocache/src/main/: AndroidManifest.xml
videocache/src/main/java/com/flutter/videocache/: ByteArrayCache.java  ByteArraySource.java  Cache.java  CacheListener.java  Config.java  GetRequest.java  HttpProxyCache.java  HttpProxyCacheServer.java  HttpProxyCacheServerClients.java  HttpUrlSource.java  IgnoreHostProxySelector.java  InterruptedProxyCacheException.java  Pinger.java  Preconditions.java  ProxyCache.java  ProxyCacheException.java  ProxyCacheUtils.java  Source.java  SourceInfo.java  StorageUtils.java
videocache/src/main/java/com/flutter/videocache/file/: DiskUsage.java  FileCache.java  FileNameGenerator.java  Files.java  LruDiskUsage.java  Md5FileNameGenerator.java  TotalCountLruDiskUsage.java  TotalSizeLruDiskUsage.java  UnlimitedDiskUsage.java
videocache/src/main/java/com/flutter/videocache/headers/: EmptyHeadersInjector.java  HeaderInjector.java
videocache/src/main/java/com/flutter/videocache/sourcestorage/: DatabaseSourceInfoStorage.java  NoSourceInfoStorage.java  SourceInfoStorage.java  SourceInfoStorageFactory.java
videocache/src/main/res/values/: strings.xml
videocache/src/test/java/com/flutter/videocache/: ExampleUnitTest.java
(+40 files in other folders)
